[gd_scene load_steps=15 format=3 uid="uid://b6ackyt6v37dp"]

[ext_resource type="Script" uid="uid://dl5hs2jjm3r0s" path="res://gameplay-scene/OutroLost/outroLost.gd" id="1_l0p4n"]
[ext_resource type="AudioStream" uid="uid://y6xucw8v4mi5" path="res://assets/sounds/05 The Hideaway.mp3" id="2_l0p4n"]
[ext_resource type="Texture2D" uid="uid://b3bnkc40vwcg4" path="res://assets/images/ending/image4.png" id="3_l0p4n"]
[ext_resource type="FontFile" uid="uid://cpwm7d3lrhrkk" path="res://assets/PixelifySans-Regular.ttf" id="4_vp2p2"]

[sub_resource type="Animation" id="Animation_0fnvg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LostMusic:attenuation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_qyb4b"]
resource_name = "appear"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1, 1.5, 2),
"transitions": PackedFloat32Array(581732, 1e+06, 1e+06, 1e+06, 1e+06),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.247059), Color(1, 1, 1, 0.494118), Color(1, 1, 1, 0.741176), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_g0d3l"]
resource_name = "fade_audio"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LostMusic:attenuation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1e-05, 6.0]
}

[sub_resource type="Animation" id="Animation_afxn7"]
resource_name = "leave"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06, 1e+06, 581732),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.741176), Color(1, 1, 1, 0.494118), Color(1, 1, 1, 0.247059), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_usq7x"]
resource_name = "text_fade"
length = 14.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("P1:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.5, 1, 5.97667, 6.47667, 6.96667),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06, 1e+06, 1e+06, 1e+06),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.498039), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.498039), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("P3:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(7.53333, 8, 8.5, 13.4766, 13.9766, 14.4666),
"transitions": PackedFloat32Array(1e+06, 1e+06, 1e+06, 1e+06, 1e+06, 1e+06),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.498039), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.498039), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_304ha"]
_data = {
&"RESET": SubResource("Animation_0fnvg"),
&"appear": SubResource("Animation_qyb4b"),
&"fade_audio": SubResource("Animation_g0d3l"),
&"leave": SubResource("Animation_afxn7"),
&"text_fade": SubResource("Animation_usq7x")
}

[sub_resource type="Theme" id="Theme_usq7x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g0d3l"]
bg_color = Color(0.321728, 0.321728, 0.321728, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_usq7x"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afxn7"]
bg_color = Color(0, 0, 0, 0)

[node name="Outro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l0p4n")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1917.0
offset_bottom = 1076.0
color = Color(0, 0, 0, 1)

[node name="LostMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_l0p4n")
volume_db = -1.005

[node name="Image" type="Sprite2D" parent="."]
position = Vector2(960, 379)
scale = Vector2(8.56452, 8.56452)
texture = ExtResource("3_l0p4n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_304ha")
}

[node name="P3" type="Label" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 658.0
offset_right = 1689.0
offset_bottom = 934.0
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("4_vp2p2")
theme_override_font_sizes/font_size = 50
text = "Ceci dit, vous n'étiez franchement pas si loin que ça toute chose prise en compte, vous ne voudriez pas revenir demain ? Peut-être que la chance sera plus de votre côté...
"
horizontal_alignment = 3
autowrap_mode = 3

[node name="P1" type="Label" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 658.0
offset_right = 1689.0
offset_bottom = 934.0
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("4_vp2p2")
theme_override_font_sizes/font_size = 50
text = "Malgré tous vos efforts de parieur professionnel, vous n'avez pas réussi à atteindre assez pour décrocher la pierre...
"
horizontal_alignment = 3
autowrap_mode = 3

[node name="Exit" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 704.0
offset_top = 862.0
offset_right = 1216.0
offset_bottom = 930.0
theme = SubResource("Theme_usq7x")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_vp2p2")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_g0d3l")
theme_override_styles/hover = SubResource("StyleBoxFlat_usq7x")
theme_override_styles/normal = SubResource("StyleBoxFlat_afxn7")
disabled = true
text = "Back to menu"

[node name="Retry" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 860.0
offset_top = 717.0
offset_right = 1060.0
offset_bottom = 785.0
theme = SubResource("Theme_usq7x")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_vp2p2")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_g0d3l")
theme_override_styles/hover = SubResource("StyleBoxFlat_usq7x")
theme_override_styles/normal = SubResource("StyleBoxFlat_afxn7")
disabled = true
text = "Retry"

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
